--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "apexcharts": "3.35.5",
+    "bson-objectid": "^2.0.4",
     "framer-motion": "^7.10.2",
+    "mongoose": "^8.3.2",
     "react": "^18.2.0",
     "react-apexcharts": "1.4.0",
     "react-calendar": "^3.9.0",
@@ -24,6 +26,7 @@
     "react-router-dom": "^6.4.0",
     "react-scripts": "5.0.1",
     "react-table": "^7.8.0",
+    "react-toastify": "^10.0.5",
     "tailwindcss-rtl": "^0.9.0",
     "web-vitals": "^2.1.4"
   },
