--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@chakra-ui/tooltip": "^2.2.6",
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
+    "@react-pdf/renderer": "^3.4.4",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
@@ -26,6 +27,7 @@
     "react-router-dom": "^6.4.0",
     "react-scripts": "5.0.1",
     "react-table": "^7.8.0",
+    "react-to-print": "^2.15.1",
     "react-toastify": "^10.0.5",
     "tailwindcss-rtl": "^0.9.0",
     "web-vitals": "^2.1.4"
